--- a/app/views/enquiries/_tabs.html.erb
+++ b/app/views/enquiries/_tabs.html.erb
@@ -1,18 +1,19 @@
+
 <ul class="tab-menus">
   <!-- [tab_name,display,class,partial]  -->
   <% tabs =  [["Launch","none","launch","show"], 
               ["All","","all","listing"]] %>
-  <% statuses = EnquiryStatus.all.map{|i| [i.name.capitalize,"","","listing"]} %>
+  <% statuses = stat.constantize.all.map{|i| [i.name.capitalize,"","","listing"]} %>
   <% tabs += statuses %>
-  <% tabs += [["New Enquiry","","fr","new"],
-              ["Edit","none","fr edit","form"]] %>
+  <% tabs += [["New " + model.capitalize,"","fr new","form"]] %>
               
   <% tabs.each do |i| %>
       
       
            <% i1 = i[0].tr(" ","_").downcase %>
            
-           <li lang='<%= i1 + '_id' %>'  class='<%= i[2] %>' style='display:<%= i[1] %>' onclick="enquiryTabSwitch(this);" data-cond='<%= i1 %>' data-partial='<%= i[3] %>'>
+           <li lang='<%= i1 + '_id' %>'  class='<%= i1 %>' style='display:<%= i[1] %>' 
+           onclick=<%= model+"TabSwitch(this);" %> data-cond='<%= i1 %>' data-partial='<%= i[3] %>'>
            
              <%= i[0] %>
              
@@ -28,5 +29,5 @@
       <div class="tab-content" id="<%= i[0].tr(' ','_').downcase + '_id' %>"> </div>
     <% end %>
     
-    <div class="tab-content" id="new_enquiry_id"> </div>
-    <div class="tab-content" id="edit_id"> </div>
+    <div class="tab-content" id="<%= "new_" + model + "_id" %>"> </div>
+
