--- a/app/views/enquiries/index.html.erb
+++ b/app/views/enquiries/index.html.erb
@@ -9,7 +9,7 @@ activeMM("inquiresMM");
 
 </script>
 <div class="tab-container">
-   <%= render 'tabs' %>  
+   <%= render 'enquiries/tabs', :stat => "EnquiryStatus",:model => "enquiry" %>  
 </div>
 
 
