--- a/app/views/enquiries/show.html.erb
+++ b/app/views/enquiries/show.html.erb
@@ -17,7 +17,7 @@ $(function(){
 -->
 
 <div class="tab-container">
-<%= render 'tabs' %>
+ <%= render 'tabs', :stat => "EnquiryStatus",:model => "enquiry" %> 
     <div class="tab-content" id="launch_id">
 
     </div>
