--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -1,6 +1,19 @@
-<h1>Editing registration</h1>
+<script type="text/javascript">
+$(function(){
+  $("ul.tab-menus li.new_registration").show();
+  $(".tab-menus li").removeClass("active-tab");
+  $("ul.tab-menus li.new_registration").addClass("active-tab");
+  $("ul.tab-menus li.new_registration").text('Edit - <%= @registration.first_name.titleize %>');
+  $("ul.tab-menus li.new_registration").attr('data-registration_id', '<%= @registration.id %>');
+  $("ul.tab-menus li.new_registration").attr('data-cond', 'edit');
+  $("ul.tab-menus li.new_registration").trigger("click");
+});
+</script>
 
-<%= render 'form' %>
 
-<%= link_to 'Show', @registration %> |
-<%= link_to 'Back', registrations_path %>
+<div class="tab-container">
+  <%= render 'enquiries/tabs', :stat => "ApplicationStatus",:model => "registration"  %>
+  <div class="tab-content" id="edit_id">
+  </div>
+
+</div>
