--- a/app/views/user_configs/index.html.erb
+++ b/app/views/user_configs/index.html.erb
@@ -1,25 +1,7 @@
-<h1>Listing user_configs</h1>
-
-<table>
-  <tr>
-    <th>Def follow up days</th>
-    <th>User</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @user_configs.each do |user_config| %>
-  <tr>
-    <td><%= user_config.def_follow_up_days %></td>
-    <td><%= user_config.user_id %></td>
-    <td><%= link_to 'Show', user_config %></td>
-    <td><%= link_to 'Edit', edit_user_config_path(user_config) %></td>
-    <td><%= link_to 'Destroy', user_config, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+<ul>
+<% @user_config.each do |i| %>
+<li>
+  <%>
+</li>
 <% end %>
-</table>
-
-<br />
-
-<%= link_to 'New User config', new_user_config_path %>
+</ul>
