--- a/app/views/enquiries/_programme_details.html.erb
+++ b/app/views/enquiries/_programme_details.html.erb
@@ -16,7 +16,7 @@ $(function(){
 </script>
 <br/>
 <div class="cols boxstheme " style="width:97%">
-<div class="col11" >
+<div class="" >
   
     <div class="fields">
      <% @p_types.each do |i| %>
