--- a/app/views/enquiries/_note.html.erb
+++ b/app/views/enquiries/_note.html.erb
@@ -1,4 +1,4 @@
-<% if @list.to_i == 1 && @enquiry.notes.size > 0 %>
+<% if @list.to_i == 1 && obj.notes.size > 0 %>
 <table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
      <thead>
       <tr>
@@ -6,7 +6,7 @@
       </tr>
     </thead>
     <tbody>
-            <% @enquiry.notes.each do |n| %>
+            <% obj.notes.each do |n| %>
                 <tr>
                     <td>
                     <%= n.content.html_safe %>
@@ -15,7 +15,7 @@
                     </td>
                </tr>
            <% end %> 
-		   <tr>
+           <tr>
                     <td  align="left"><a href="#">Back</a></td>
                </tr>
 
@@ -33,8 +33,8 @@
  <div id="note-action" class="action-box">
             <%= fbox(g,[:content,size: "6x6",class: "tinymce" ,style:"height:auto;"],"text_area",nil,"Note") %>
             <br/>
-            <%= g.hidden_field :sub_class,value: "Enquiry" %>
-            <%= g.hidden_field :sub_id,value: @enquiry.id %>
+            <%= g.hidden_field :sub_class,value: obj_name.capitalize %>
+            <%= g.hidden_field :sub_id,value: obj.id %>
             <%= hidden_field_tag "#{g.object_name}[note]", "from_action" %>
             <%= g.submit "Add note",{class: "btnp"} %>
 </div>
