--- a/app/views/registrations/_show.html.erb
+++ b/app/views/registrations/_show.html.erb
@@ -18,7 +18,7 @@
             <div class="cl"></div>
         </div>
         <br/>
-        <div class="cols brgb" style="padding-bottom:20px">
+        <div class="cols" style="padding-bottom:20px">
             <div class="col8">
                 <div id="scrollboxu">
                     <img src="/images/icons/user.png" width="100"  class="imgb fl"/>
@@ -100,6 +100,14 @@
             </div>
         </div>
 <br/>
+<div class="htab">
+  <h5>
+    Registration Information
+  </h5>
+  <div class="cl"></div>
+</div>
+<br/>
+
     <% tabs_arr = %w(Course Details Document) %>
     <div class="newtab-container">
         <ul class="newtab-menus">
@@ -117,9 +125,47 @@
         <% end %>
         
     </div>
+    
+    
+    <br/><div class="htab">
+        <h5><b>Timeline</b></h5>
+        </div><br/>
+        <div id="scrollboxu"  style="height:440px">    
+        <ul class="vlsdn">
+            <%= render 'enquiries/timeline' %>
+        </ul>
+        </div><br/><br/>
+        
+       <div id="registration_id_div" data-registration_id='<%= a.id %>' data-model_sing='registration' data-model_plu='registrations' >
+        </div>
+        <div class="htab">
+        <h5><b>Action</b></h5>
+        </div>
+        <div class="boxstheme">
+          <%= render "actions" %>
+          <!-- Action container -->
+          <div id="action_div">
+          </div>
+       </div>
 
 <!-- INQUIRY DETAILS - ENDS -->
 
 <script type="text/javascript">
+
 activeNewSubTab("newtab-content","course-content","course");
+
+$(document).ready(function(){
+    /* ON CLICKING MAIN MENU*/
+    $(".newtab-menus li").click(function(){
+        /* HIDE ALL TABS CONTENT*/
+        $(".newtab-content").hide();
+        /* SHOW THE CORESPONDING TAB CONTENT*/
+        $("#"+this.lang).show();
+        /* INACTIVE ALL TABS */
+        $(".newtab-menus li").removeClass("active-tab");
+        /* ACTIVE CURRENT TABS */
+        $(this).addClass("active-tab");
+    });
+});
+
 </script>
