--- a/app/views/enquiries/_programme_details.html.erb
+++ b/app/views/enquiries/_programme_details.html.erb
@@ -113,7 +113,7 @@ $(function(){
         
         
         
-        <div class="ins_ref_no fbox" style='<%= sty[3] %>'>
+        <div class="ins_ref_no frbox" style='<%= sty[3] %>'>
              <%= fs(p,"ins_ref_no","text_field") %>
         </div>
     </div>
