--- a/app/views/registrations/_document.html.erb
+++ b/app/views/registrations/_document.html.erb
@@ -17,9 +17,9 @@ Documents Received
             </li>
             
     <% end %>
-    
+    <span class="btns">
     <%= submit_tag "Delete Selected",method: :delete %>
-
+	</span>
 <% end %>
     
 </ul>
